# Projektarbeit

./: .gitignore  README.md  docker-compose.yml  run_pipeline.sh  setup_guide.md  skills-lock.json
Ausarbeitung/: Projektarbeit.tex
Themenfindung/: Arbeitsexpose_Komplett.aux  Arbeitsexpose_Komplett.md  Arbeitsexpose_Komplett.out  Arbeitsexpose_Komplett.tex  Arbeitsexpose_v3.aux  Arbeitsexpose_v3.fdb_latexmk  Arbeitsexpose_v3.fls  Arbeitsexpose_v3.out  Arbeitsexpose_v3.tex  Arbeitsexpose_v3_kurz.aux  Arbeitsexpose_v3_kurz.fdb_latexmk  Arbeitsexpose_v3_kurz.fls  Arbeitsexpose_v3_kurz.out  Arbeitsexpose_v3_kurz.tex  Audio_Feedback_Review.md  Bachelorarbeit_Zusammenfassung.md  Docker_Pipeline_Review.md  Docker_Pipeline_Setup_Guide.md  Expose_PA_BA.aux  Expose_PA_BA.out  Expose_PA_BA.tex  Expose_PA_BA_kurz.aux  Expose_PA_BA_kurz.fdb_latexmk  Expose_PA_BA_kurz.fls  Expose_PA_BA_kurz.tex  Feasibility_Report.md  Georeferencing_Evaluation.md  Kurzexpose_3DGS_ScanToBIM.aux  Kurzexpose_3DGS_ScanToBIM.tex  Kurzexpose_Dozent.aux  Kurzexpose_Dozent.fdb_latexmk  Kurzexpose_Dozent.fls  Kurzexpose_Dozent.out  Kurzexpose_Dozent.tex  Master_Konzept_3DGS_Pipeline.aux  Master_Konzept_3DGS_Pipeline.out  Master_Konzept_3DGS_Pipeline.tex  Master_Konzept_3DGS_Pipeline.toc  Projektarbeit_Zusammenfassung.md  Rechercheplan_Fragebogen.md  (+8 more)
Themenfindung/Archiv/: implementation_plan_v1.md  implementation_plan_v2.md  implementation_plan_v3.md  implementation_plan_v4.md
Themenfindung/KI_Literaturrecherche/: Research_Brief_3DGS_vs_Photogrammetry.md
src/cpp/: CMakeLists.txt
src/cpp/src/: main.cpp
(+63 files in other folders)
